added pair plugin!!
Signed-off-by: rachejazz <divyadeepti2000@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "pack/my_plugins/start/vim-airline"]
 	path = pack/my_plugins/start/vim-airline
 	url = https://github.com/vim-airline/vim-airline
+[submodule "pack/my_plugins/start/auto-pairs"]
+	path = pack/my_plugins/start/auto-pairs
+	url = https://github.com/jiangmiao/auto-pairs.git
